# ai-ops-approval-workflow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RESULTS.md  SECURITY.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: n8n-entrypoint.sh
docs/: architecture.md  demo_script.md  github_publish.md  n8n_workflow_plan.md  reference_comparison.md  reuse_and_license.md
examples/: billing_request.json  high_priority_request.json
src/ai_ops_approval/: __init__.py  domain.py  llm.py  main.py  schemas.py  settings.py  storage.py
src/ai_ops_approval/static/: app.css  app.js  index.html
tests/: test_api.py  test_api_security.py  test_domain.py  test_llm.py  test_settings.py  test_storage.py  test_workflow.py
workflows/: ai_ops_approval_n8n.json
