[project]
name = "ai-ops-approval-workflow"
version = "1.0.0"
description = "Backend-first AI workflow for request triage, human approval, and audit logging."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Iago Aragao" }
]
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[project.scripts]
ai-ops-api = "ai_ops_approval.main:run"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
