[project]
name = "ai-ops-approval-workflow"
version = "1.0.1"
description = "Backend-first AI workflow for request triage, human approval, and audit logging."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Iago Aragao" }
]
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.6,<1",
]

[project.scripts]
ai-ops-api = "ai_ops_approval.main:run"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "PIE", "RUF", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["ai_ops_approval"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
